fix center alignment of columns and change to intro

--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body
   display: flex;
   flex-direction: column;
   width: 426px;
+  margin: 0px auto;
 }
 
 .item
